// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTransactions has the expected html structure if user has signed in 1`] = `
<tm-page-stub
  data-title="Transactions"
  dataset="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  hasfiltereddata="true"
  loaded="true"
  menubody=""
  refresh="function () { [native code] }"
  search="transactions"
  subtitle=""
  title=""
>

  <data-empty-tx-stub /> 
  <template>
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
     
    <br />
  </template>
</tm-page-stub>
`;

exports[`PageTransactions has the expected html structure if user hasn't signed in 1`] = `
<tm-page-stub
  data-title="Transactions"
  dataset="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  hasfiltereddata="true"
  loaded="true"
  menubody=""
  refresh="function () { [native code] }"
  search="transactions"
  subtitle=""
  title=""
>
  <data-empty-tx-stub />
   
  <template>
    <tm-li-any-transaction-stub
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      bondingdenom="STAKE"
      proposalsurl="/governance"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators="[object Object],[object Object],[object Object]"
      validatorsurl="/staking/validators"
    />
     
    <br />
  </template>
</tm-page-stub>
`;
